--- a/example/astgen/CMakeLists.txt
+++ b/example/astgen/CMakeLists.txt
@@ -1,4 +1,4 @@
 file(GLOB SRC *.cc)
 add_executable(astgen ${SRC})
-target_link_libraries(astgen PRIVATE cxxgen_static)
+target_link_libraries(astgen PRIVATE cxxgen)
 set_target_properties(astgen PROPERTIES CXX_STANDARD 17)
